<resources>
    <string name="app_name">MVVM Room Kotlin Example</string>
    <string name="enter_the_username_and_password">Enter the Username and Password</string>
    <string name="username">Firstname</string>
    <string name="id">id</string>
    <string name="password">Password</string>
    <string name="insert_user">Add User</string>
    <string name="disjoint_horizontal_lines">- - -</string>
    <string name="click_to_read_credentials_from_room">Click To Read Credentials From Room</string>
    <string name="used_to_edit_the_login_details">Used to edit the login details</string>
    <string name="age">Age</string>
    <string name="no_data_found">No Data Found!!</string>
    <string name="lastname">LastName</string>
</resources>